updated template links

--- a/stw/templates/stwexample.html
+++ b/stw/templates/stwexample.html
@@ -285,8 +285,8 @@ a:hover {
   <div id="header-wrapper">
     <div id="header">
       <div id="logo">
-	<h1><a href="#">django-stw</a></h1>
-	<h3>Django + Shrink The Web Examples</h3>
+	    <h1><a href="http://github.com/saschwarz/django-stw">django-stw</a></h1>
+	    <h3>Django + Shrink The Web Examples</h3>
       </div>
     </div>
   </div>
@@ -365,7 +365,7 @@ a:hover {
 	  </div>
 	  <a id="stwimage-pro-examples"></a>
 	  <h1>stwimage PRO api examples</h1>
-      <p>Requires 'stwu' in settings.SHRINK_THE_WEB and purchase of appropriate options from STW</p>
+      <p>Requires 'stwu' in settings.SHRINK_THE_WEB and purchase of appropriate options from <a href="http://www.shrinktheweb.com?a=988">Shrink The Web</a></p>
       <div class="post">
 	    <h2 class="title"><a id="stwimage-inside">inside page</a></h2>
 	    <div class="entry">
@@ -398,6 +398,10 @@ a:hover {
 	<!-- end #content -->
 	<div id="sidebar">
 	  <ul>
+        <li>
+          <h2><a href="http://www.shrinktheweb.com/forums/stw-developer-community/pagepix-documentation?a=988">Shrink The Web API Docs</a></h2>
+        </li>
+        </li>
 	    <li>
 	      <h2><a href="#shrinkthewebimage-examples">shrinkthewebimage examples</a></h2>
 	      <ul><li><a href="#shrinkthewebimage-mcr">micro</a></li>
