Removed stwu param from docs/example - updated revision

--- a/stw/templates/stwexample.html
+++ b/stw/templates/stwexample.html
@@ -338,7 +338,7 @@ a:hover {
 	  </div>
 	  <a id="stwimage-pro-examples"></a>
 	  <h1>stwimage PRO api examples</h1>
-	  <p>Requires 'stwu' in settings.SHRINK_THE_WEB and purchase of appropriate options from <a href="http://www.shrinktheweb.com?a=988">Shrink The Web</a></p>
+	  <p>Requires purchase of appropriate options from <a href="http://www.shrinktheweb.com?a=988">Shrink The Web</a></p>
 	  <div class="post">
 	    <h2 class="title"><a id="stwimage-mcr">micro</a></h2>
 	    <div class="entry">
