--- a/stw/templates/stwexample.html
+++ b/stw/templates/stwexample.html
@@ -56,14 +56,14 @@
     <div class="container">
         <div class="body">
             <div class="well">
-                <h1><a href="http://github.com/saschwarz/django-stw">django-stw</a></h1>
+                <h1><a href="https://github.com/saschwarz/django-stw">django-stw</a></h1>
                 <h3>Django + Shrink The Web Examples</h3>
             </div>
             <p>Simple syntax. At the top of each template file load the templatetags:</p>
             <pre>{% templatetag openblock %} load shrinkthewebtags {% templatetag closeblock %}</pre>
             <p>At each place you'd like a screen shot insert the <code>stwimage</code> template tag with the two mandatory arguments: the url and the <code>alt</code> text:</p>
             <pre>{% templatetag openblock %} stwimage "https://djangoproject.com/" "Django website" {% templatetag closeblock %}</pre>
-            <p>The following examples demonstrate adding additional <code>key=value</code> options. Some require purchasing and enabling additional features on the <a href="http://shrinktheweb.com" class="href">shrinktheweb.com</a> site.</p>
+            <p>The following examples demonstrate adding additional <code>key=value</code> options. Some require purchasing and enabling additional features on the <a href="https://shrinktheweb.com" class="href">shrinktheweb.com</a> site.</p>
             <div class="alert alert-info" role="alert">
                 <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Images may not be shown below if they have expired in the shrinktheweb cache. Wait a moment and refresh the page to see them.
             </div>
